          by default)
        * Disable eaccelerator_list_keys function when not build with either
          session, shm or user cache functionality (which are all off by
          default)
        * Disable 'User Cache' tab in control panel when not build with either
          session, shm or user cache functionality (which are all off by
          default)

2007-08-20  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Rewrite the calc_* funtions so they no longer uses the EAG(mem) global.
        * Rewrite the fixup_* functions so they no longer use the EAG(mem) global.
        * Rewrite store_* functions so they no longer use the EAG(mem) global.
        * Add code that checks the shared memory chunks if needed to make sure
          no data was written past the boundary. Change #undef MM_CHECK in mm.c
          to #define MM_CHECK

2007-08-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix an E_NOTICE error in the control panel
        * Improve storing of objects and fix bug #264

2007-08-16  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix a typo in the config file. #269

2007-08-14  Hans Rakers <hans at react.nl>

        * Optimizer fix for #242. PHP-5.2.1 introduces a ZEND_JMP before a
          ZEND_FETCH_CLASS/ZEND_CATCH which the optimizer did not handle
          correctly, resulting in uncaught exceptions. (Thanks to warwickshaw)

2007-05-09  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use php_strtok_r instead of strtok_r (Thanks to Daan <daan at parse.nl>)
        * Add fnmatch.c and fnmatch.h and use it on win32 (Thanks to Daan <daan at parse.nl>)
        * Casting of var 'len' to (int) in decode_version() to get rid of an VC++ 6 warning (Thanks to Daan <daan at parse.nl>)

2007-04-21  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Add patch from Nathanael (eaccelerator@polymorpheus.com)

2007-03-07  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
